# rustdice

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/lib/: dice.rs  mod.rs  parse.rs
